# ros2_control_demos

./: .gitignore  README.md  ros2_control_demos.kilted.repos
.github/workflows/: reusable-industrial-ci-with-cache.yml  rolling-semi-binary-build.yml
Dockerfile/: Dockerfile_onnx  entrypoint.sh
example_1/doc/: userdoc.rst
example_17/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_example_17.xml
example_17/bringup/config/: analyzers_config.yaml  diffbot_chained_controllers.yaml  mecanum_bot_controller.yaml  mecanumwheelbot_controllers.yaml  plotjuggler.xml
example_17/bringup/launch/: demo_test_helper.py  diffbot.launch.py  diffbot_rubicon.launch.py  mecanumbot_rubicon.launch.py  mecanumwheelbot.launch.py  rubicon.launch.py
example_17/controller/: mecanumwheelbot_controller.cpp
example_17/controller/include/ros2_control_demo_example_17/: mecanumwheelbot_controller.hpp
example_17/description/gazebo/: diffbot.gazebo.xacro
example_17/description/launch/: view_robot.launch.py
example_17/description/ros2_control/: diffbot.ros2_control.xacro  mecanumwheelbot.ros2_control.xacro
example_17/description/urdf/: mecanumwheelbot.urdf.xacro
example_17/doc/: userdoc.rst
example_17/env_hooks/: gz_sim_resource_path.dsv.in
example_17/hardware/: mecanumwheelbot_system.cpp
example_17/hardware/include/ros2_control_demo_example_17/: mecanumwheelbot_system.hpp
example_17/hooks/: gz_sim_resource_path.dsv.in
example_17/models/costar_husky/: model.sdf  model_gz.sdf  model_ros2_control.sdf
example_17/models/mecanum_lift/: model.sdf
example_17/ros2_control_demo_example_17/: __init__.py
example_17/ros2_control_demo_example_17/launch_tools/: substitutions.py
example_17/test/: test_mecanumwheelbot_launch.py  test_mecanumwheelbot_launch_remapped.py  test_urdf_xacro.py  test_view_robot_launch.py
example_17/worlds/: empty.sdf  rubicon.sdf
example_18/: CMakeLists.txt  README.md  locomotion_controller.xml  package.xml
example_18/bringup/config/: biped_robot_controllers.yaml  open_duck_mini_controllers.yaml  open_duck_mini_controllers_data_collection.yaml  open_duck_mini_pids.yaml
example_18/bringup/launch/: example_18_gazebo.launch.py  example_18_mujoco.launch.py  example_18_onnx_demo.launch.py  example_18_ros2_control.launch.py  onnx_infer_ros2.py  test_motions.py
example_18/controller/src/: observation_formatter.cpp
example_18/controller/test/: test_motion_controller_initialization.cpp  test_motion_controller_mujoco.cpp
example_18/controllers/include/locomotion_controller/: action_processor.hpp  locomotion_controller.hpp  observation_formatter.hpp
example_18/controllers/include/motion_controller/: action_processor.hpp  motion_controller.hpp  observation_formatter.hpp
example_18/controllers/src/: action_processor.cpp  locomotion_controller.cpp  locomotion_controller_parameters.yaml  motion_controller.cpp  motion_controller_parameters.yaml  observation_formatter.cpp
example_18/controllers/test/: test_action_processor.cpp  test_motion_controller_initialization.cpp  test_motion_controller_mujoco.cpp  test_observation_formatter.cpp  test_onnx_shape_handling.cpp
example_18/description/: DEBUG.md  README.md
example_18/description/assets/: README.md
example_18/description/gazebo/: berkeley_humanoid_lite_biped.gazebo.xacro
example_18/description/launch/: open_duck_mini.rviz  view_robot.launch.py
example_18/description/mujoco/: open_duck_mini_v2-contact-goem.xml  open_duck_mini_v2-friction.xml  open_duck_mini_v2.xml  robot.urdf  scene.xml  start_positions.xml
example_18/description/ros2_control/: berkeley_humanoid_lite_biped.ros2_control.xacro  open_duck_mini.ros2_control copy.xacro  open_duck_mini.ros2_control.xacro
example_18/description/scripts/: mujoco_xml_to_urdf.py  reduce_float_precision.py  replace_collision_meshes.py
example_18/description/urdf/: README.md  berkeley_humanoid_lite_biped.urdf  berkeley_humanoid_lite_biped.urdf.xacro  open_duck_mini.urdf.xacro
example_18/doc/: design.rst  onnx_runtime.rst  painpoints_slides.md  query_gazebo_joint_limits.rst  urdf_from_mcjf.md  userdoc.rst  velocimeter_setup_steps.md
example_18/fine_tuning/: README.md  convert_mujoco_h5_to_pkl.py  convert_run_onnx_log_to_pkl.py  create_injection_yaml.py  data_collection.launch.py  inject_state_comparison.py  inject_state_template.yaml  manual_control_ros2.py  test_debug_topics.py  test_onnx_inference.py  validate_data.py
example_18/fine_tuning/docs/: SETUP_COMPARISON.md  WALKING_DEBUGGING.md  debug_implementation_evaluation.md  debug_update_loop.md  fine_tuning_plan.rst  workflow_complete.md  workflow_review.md
example_18/hardware/: duck_mini_mujoco_system_interface.cpp
example_18/hardware/include/ros2_control_demo_example_18/: duck_mini_mujoco_system_interface.hpp
example_18/hardware/test/: test_contact_detection.cpp
example_18/hooks/: gazebo_model_path.dsv.in  gz_sim_resource_path.dsv.in
example_18/onnx_model/: 2025_12_26_165635_300482560.onnx.metadata.json  2025_12_27_220956_6881280.onnx  README.md
example_18_motion_controller_msgs/: CMakeLists.txt  package.xml
example_18_motion_controller_msgs/msg/: VelocityCommandWithHead.msg
example_2/: CMakeLists.txt
example_2/bringup/launch/: diffbot_gazebo.launch.py
example_2/description/gazebo/: diffbot.gazebo.xacro
example_2/description/ros2_control/: diffbot.ros2_control.xacro
example_2/description/urdf/: diffbot.urdf.xacro
ros2_control_demo_description/: CMakeLists.txt
ros2_control_demo_description/mecanumwheelbot/urdf/: mecanumwheelbot_description.urdf.xacro
